--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Hi
                 <span id="name">tamsuu</span>
             </h1>
-            <p class="two" id="greetingText">i really like your name btw!</p>
+            <p class="two" id="greetingText">u've got a new message ૮₍´｡ᵔ ꈊ ᵔ｡₎ა !</p>
         </div>
 
         <div class="three">
@@ -47,16 +47,16 @@ aku juga mau ucap beribu syukur karna masih dikasih kesempatan buat bisa bareng 
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">i was about to just send a simple message</p>
+            <p class="idea-2">but then i paused.</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
+                i realized, this moment<br>
+                <strong>deserve more</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">because,</p>
             <p class="idea-5">
-                You are Special
+                u mean more
                 <span>:)</span>
             </p>
             <p class="idea-6">
@@ -66,11 +66,12 @@ aku juga mau ucap beribu syukur karna masih dikasih kesempatan buat bisa bareng 
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/tasya.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/cat.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText"> ;)</h5>
+                <h5 id="wishText">hope this year will be a very good year for u, ilysm (๑•ᴗ•๑) ♡</h5>
             </div>
         </div>
 
@@ -143,8 +144,8 @@ aku juga mau ucap beribu syukur karna masih dikasih kesempatan buat bisa bareng 
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>okay, thanks for watching yeaaa🫣</p>
+            <p id="replay">click, if you want to watch it again😉</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
